--- a/test_token.R.save.1
+++ b/test_token.R.save.1
@@ -1,7 +1,4 @@
-
 library(rtweet)
-
-options(httr_oauth_cache = TRUE)
 
 print("GETTING KEYS ...")
 source("R/setup_keys.R")
@@ -23,7 +20,7 @@ token <- create_token(app = app_name,
                       consumer_secret = api_key_secret,
                       access_token = access_token,
                       access_secret = access_token_secret,
-                      set_renv = TRUE)
+                      set_renv = FALSE)
 print(token)
 print(api_key)
 
